Finally got the logo aligned correctly.

--- a/theme/static/css/nwcpp.css
+++ b/theme/static/css/nwcpp.css
@@ -7,6 +7,13 @@
 #banner nav a:link, #banner nav a:visited {
     padding: 5px 1.1em;
 }
+#banner .title img {
+	float: left;
+}
+
+#banner .title h1 {
+	/*float: right;*/
+}
 
 .content-wrapper {
 	width: 1100px;
